--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,10 @@ html {
     padding: 0;
     max-width: 100%;
     height: 100vh;
+    height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
     overflow: hidden;
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: env(safe-area-inset-bottom);
   }
   
   body {
